--- a/templates/index1.html
+++ b/templates/index1.html
@@ -14,7 +14,12 @@
       </div>
     </div>
     <div class="row">
-      {%for i in range(1,8) %}
+      <form action = "/" method = "POST"
+         enctype = "multipart/form-data">
+         <input type = "file" name = "file" />
+         <input type = "submit"/>
+      </form>
+      {%for i in range(1,l1) %}
         <div class="col-lg-3 col-md-6">
           <div class="card  m-3 bg-light" style="width:75%;">
             <div class="card-body">
