Changes made to templates
Frontend changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Hello World - TensorFlow.js</title>
+    <title>Predictions!!</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -28,7 +28,7 @@
         <img src="{{s}}" class="card-img-top"</img>
       </div>
       <div class="card-footer border-top-0">
-        <h2 class="text-center fw-bolder text-success" id="p1"></h2>
+        <h2 class="text-center fw-bolder text-success" id="p1">Hang On!! Our Model is predicting the emotion!!</h2>
       </div>
     </div>
     </div>
