--- a/templates/index1.html
+++ b/templates/index1.html
@@ -21,12 +21,12 @@
       </form>
       {%for i in range(1,l1) %}
         <div class="col-lg-3 col-md-6">
-          <div class="card  m-3 bg-light" style="width:75%;">
+          <div class="card  m-3 bg-light" style="width:65%;">
             <div class="card-body">
               <img src="static/images/{{i}}.jpg" class="card-img-top" id='im'</img>
             </div>
             <div class="card-footer border-top-0">
-              <a href="{{i}}" class="btn btn-info d-block mx-auto">Predict</a>
+              <a href="{{i}}" class="btn btn-success d-block mx-auto">Predict</a>
             </div>
           </div>
         </div>
